# dune-mgis

./: CMakeLists.txt  README.md  config.h.cmake  dune-mgis.pc.in  dune.module
cmake/modules/: CMakeLists.txt
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt
dune/mgis/: CMakeLists.txt  mgis.hh
src/: CMakeLists.txt  dune-mgis-ssna303.cc  dune-mgis-tensile-test.cc
tests/ssna303/: LogarithmicStrainPlasticity.mfront  results-LogarithmicStrainPlasticity.txt  ssna303-mesh.msh
tests/ssna303/castem/: LogarithmicStrainPlasticity-ssna303-ktac.dgibi  castem-results.txt
tests/tensile-test/: Elasticity.mfront  Plasticity.mfront  results-Elasticity.txt  results-Plasticity.txt
